<resources>
    <string name="app_name">MusicSocial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Social</string>
    <string name="title_player">Reproductor</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="slogan">Disfruta de compartir la música</string>
    <string name="menu_title1">Opciones</string>
    <string name="nav_conf">Configuración</string>
    <string name="nav_logOut">Cerrar Sesión</string>

    <string name="facebook_app_id">228848301279452</string>
    <string name="fb_login_protocol_scheme">fb228848301279452</string>
    <string name="not_logout_google">No se pudo cerrar sesión</string>
    <string name="login_label1">o accede mediante</string>
    <string name="login_email_hint">MiEmail@ejemplo.com</string>
    <string name="login_pass_hint">Contraseña</string>
    <string name="login_label2">Acceso</string>
    <string name="login_button">Acceder</string>
    <string name="register_button">Registrar</string>
    <string name="register_surname_hint">Apellidos</string>
    <string name="register_name_hint">Nombre o Nick</string>
    <string name="error_empty_fields">Debes rellenar todos los campos</string>
    <string name="forgot_password_button">Enviar contraseña</string>
    <string name="error_password_reset">No se ha podido resstablecer la contraseña, revise que sea el correo correcto</string>
    <string name="forgot_password_label">Introduce el correo del cual quieres recupera la contraeña</string>
    <string name="error_data_login">Correo o contaseña erroneos, intentelo de nuevo.</string>
    <string name="forgot_password_link">¿Olvidaste tu contraseña?</string>
    <string name="error_firebase_google_autentication">Proceso de autenticación en firebase mediante credencial de google ha fallado</string>
    <string name="register_label">Registro</string>
    <string name="login_pass_hint2">Repita la contraseña</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden, por favor inténtelo de nuevo</string>
    <string name="close_session">¿Seguro que deseas cerrar la sesión?</string>
    <string name="txt_song_name">Nombre de la cancion</string>

</resources>
