<?xml version="1.0" encoding="UTF-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="Perfil" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/menu_title1">
        <menu>
            <item
                android:id="@+id/nav_config"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_conf" />
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_logOut" />
        </menu>
    </item>

</menu>
